php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #38942 Double old-style-ctor inheritance
Submitted: 2006-09-24 18:14 UTC Modified: 2006-10-03 09:59 UTC
From: hannes dot magnusson at gmail dot com Assigned: dmitry (profile)
Status: Closed Package: Scripting Engine problem
PHP Version: 5CVS-2006-09-24 (CVS) OS: *
Private report: No CVE-ID: None
 [2006-09-24 18:14 UTC] hannes dot magnusson at gmail dot com
Description:
------------
The engine seems to register old-style-ctors twice, once 
during parent-ctor-inheriting and once during 
normal-method-inheriting 

Reproduce code:
---------------
<?php
class foo {
    public function foo() {}
}

class bar extends foo {
}


ReflectionClass::export("bar");


Expected result:
----------------
  - Methods [1] {
    Method [ <user, inherits foo, ctor> public method 
foo ] {
      @@ /usr/src/php/5.2/bug.php 3 - 3
    }

Actual result:
--------------
  - Methods [2] {
    Method [ <user, inherits foo, ctor> public method 
foo ] {
      @@ /usr/src/php/5.2/bug.php 3 - 3
    }

    Method [ <user, inherits foo, ctor> public method 
foo ] {
      @@ /usr/src/php/5.2/bug.php 3 - 3
    }

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2006-09-26 07:57 UTC] dmitry@php.net
Fixed in CVS HEAD and PHP_5_2.
 [2006-09-28 11:47 UTC] bjori@php.net
(re-open as a reminder, see: 
http://news.php.net/php.cvs/40710)
 [2006-10-03 09:59 UTC] dmitry@php.net
Fixed in CVS HEAD and PHP_5_2.
 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Tue Sep 29 20:00:02 2026 UTC