Fixed bug #38942 (Double old-style-ctor inheritance)